--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4169E1</color>
+    <color name="colorPrimary">#484848</color>
     <color name="colorPrimaryDark">#00008B</color>
-    <color name="colorAccent">#2B931B</color>
+    <color name="colorAccent">#ffffff</color>
     <color name="default_waveform">#178b51</color>
     <color name="default_waveformFill">#80FFC0</color>
     <color name="default_playback_indicator">#ffff66</color>
