--- a/app/src/main/res/layout/wave_form.xml
+++ b/app/src/main/res/layout/wave_form.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MainAudioTranslation">
+    tools:context=".AudioReceiver">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -23,14 +23,6 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/wave_context" />
-
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/playFab"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|start"-->
-        <!--android:layout_margin="@dimen/fab_margin"-->
-        <!--android:src="@android:drawable/ic_media_play" />-->
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
