--- a/app/src/main/res/layout/to_morse.xml
+++ b/app/src/main/res/layout/to_morse.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/grey_background" >
@@ -21,7 +20,7 @@
         android:elevation="2dp"
         android:gravity="center_horizontal"
         android:hint="Output"
-        android:fontFamily="@font/computer"
+        android:textColorHint="#ffff"
         android:textColor="#ffffff"
         android:textSize="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,20 +28,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.38" />
-
-    <!--<TextView-->
-        <!--android:layout_width="354dp"-->
-        <!--android:layout_height="209dp"-->
-        <!--android:background="#ffff"-->
-        <!--tools:layout_editor_absoluteX="15dp"-->
-        <!--tools:layout_editor_absoluteY="0dp" />-->
-
-    <!--<TextView-->
-        <!--android:layout_width="372dp"-->
-        <!--android:layout_height="345dp"-->
-        <!--android:background="@drawable/grey_background"-->
-        <!--tools:layout_editor_absoluteX="6dp"-->
-        <!--tools:layout_editor_absoluteY="215dp" />-->
 
     <EditText
         android:id="@+id/input_editText"
@@ -57,7 +42,7 @@
         android:backgroundTint="#ffff"
         android:gravity="center_horizontal"
         android:hint="Enter Text:"
-        android:fontFamily="@font/computer"
+        android:textColorHint="#fff"
         android:textColor="#ffffff"
         android:textSize="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,7 +63,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="#9d8e1c"
+        android:backgroundTint="#785964"
         android:fontFamily="@font/computer"
         android:text="To Sound"
         android:textColor="#ffff"
@@ -101,7 +86,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="#9d8e1c"
+        android:backgroundTint="#785964"
         android:fontFamily="@font/computer"
         android:text="To Flash"
         android:textColor="#ffff"
@@ -123,7 +108,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="#9d8e1c"
+        android:backgroundTint="#785964"
         android:fontFamily="@font/computer"
         android:text="To Vibrate"
         android:textColor="#ffff"
@@ -135,7 +120,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.847" />
 
-
     <Button
         android:id="@+id/toMorse"
         android:layout_width="169dp"
@@ -145,7 +129,7 @@
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:background="@drawable/roundbutton"
-        android:backgroundTint="#9f6dce"
+        android:backgroundTint="#82A7A6"
         android:fontFamily="@font/computer"
         android:text="Convert"
         android:textColor="#ffff"
@@ -156,8 +140,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.214" />
 
-
-
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/indexx2"
+        android:adjustViewBounds="true"
+        android:elevation="2dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/index"
@@ -177,54 +166,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.995"
         app:srcCompat="@drawable/help" />
-
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/floatingActionButton"-->
-        <!--android:layout_width="57dp"-->
-        <!--android:layout_height="48dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--android:layout_marginBottom="8dp"-->
-        <!--android:clickable="true"-->
-        <!--app:layout_constraintBottom_toBottomOf="@+id/input_editText"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintHorizontal_bias="0.0"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/index"-->
-        <!--app:layout_constraintVertical_bias="0.017"-->
-        <!--app:srcCompat="@drawable/house" />-->
-
-    <!--<Button-->
-        <!--android:id="@+id/buttonEnable"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_above="@id/imageFlashlight"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginBottom="8dp"-->
-        <!--android:layout_marginEnd="8dp"-->
-        <!--android:layout_marginLeft="8dp"-->
-        <!--android:layout_marginRight="8dp"-->
-        <!--android:layout_marginStart="8dp"-->
-        <!--android:layout_marginTop="8dp"-->
-        <!--android:text="Enable Camera"-->
-        <!--android:textSize="20sp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintEnd_toEndOf="parent"-->
-        <!--app:layout_constraintHorizontal_bias="0.382"-->
-        <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toTopOf="parent"-->
-        <!--app:layout_constraintVertical_bias="0.017" />-->
-
-    <!--<ImageView-->
-        <!--android:id="@+id/imageView"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:src="@drawable/indexx2"-->
-        <!--android:adjustViewBounds="true"-->
-        <!--android:elevation="2dp"-->
-        <!--/>-->
 
 </android.support.constraint.ConstraintLayout>
